--- a/ProjectTimeline/ProjectTimeline.csproj
+++ b/ProjectTimeline/ProjectTimeline.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Views\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ProjectLibrary\ProjectLibrary.csproj" />
+  </ItemGroup>
+
 </Project>
